security-service-poc/security-service/deploy/keycloak-ingress-access/keycloak-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-service-vs
spec:
  hosts:
    - "*"
  gateways:
    - my-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/auth"
      route:
        - destination:
            port:
              number: 80
            host: keycloak
